syntax = "proto3";

package wayfarer.auth;

service AuthGrpcService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc RegisterUser (RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  string userId = 1;
  string message = 2;
}
